update to hazelcast DB